fix z-index of code button

--- a/alok.css
+++ b/alok.css
@@ -109,7 +109,7 @@ span {
 }
 
 div[style="position: absolute; z-index: 1000; top: 0px; right: 0px; opacity: 0.5;"] {
-  z-index: 1 !important;
+  z-index: 3 !important;
 }
 
 .roam-block-container,
@@ -631,9 +631,6 @@ blockquote.rm-bq {
   color: #00000f;
   background: #85a0ad;
 }
-.bp3-popover div[style="padding: 8px 0px; font-size: 0.8em; color: rgb(167, 182, 194);"] {
-  color: #00000f !important;
-}
 .bp3-popover > .bp3-popover-content {
   background-color: #85a0ad;
   color: #00000f;
@@ -644,6 +641,10 @@ blockquote.rm-bq {
 .bp3-popover .bp3-popover-arrow-border {
   fill: #00000f;
   fill-opacity: 0.3;
+}
+
+.bp3-popover div[style="padding: 8px 0px; font-size: 0.8em; color: rgb(167, 182, 194);"] {
+  color: #00000f !important;
 }
 .bp3-popover .bp3-button {
   color: #00000f;
