--- a/preset-dark.css
+++ b/preset-dark.css
@@ -80,7 +80,7 @@ span {
 }
 
 div[style="position: absolute; z-index: 1000; top: 0px; right: 0px; opacity: 0.5;"] {
-  z-index: 1 !important;
+  z-index: 3 !important;
 }
 
 .roam-block-container,
@@ -624,9 +624,6 @@ blockquote.rm-bq {
   color: #00000f;
   background: #cbebfb;
 }
-.bp3-popover div[style="padding: 8px 0px; font-size: 0.8em; color: rgb(167, 182, 194);"] {
-  color: #00000f !important;
-}
 .bp3-popover > .bp3-popover-content {
   background-color: #cbebfb;
   color: #00000f;
@@ -637,6 +634,10 @@ blockquote.rm-bq {
 .bp3-popover .bp3-popover-arrow-border {
   fill: #00000f;
   fill-opacity: 0.3;
+}
+
+.bp3-popover div[style="padding: 8px 0px; font-size: 0.8em; color: rgb(167, 182, 194);"] {
+  color: #00000f !important;
 }
 .bp3-popover .bp3-button {
   color: #00000f;
