--- a/preset-dynamic.css
+++ b/preset-dynamic.css
@@ -86,7 +86,7 @@ span {
   }
 
   div[style="position: absolute; z-index: 1000; top: 0px; right: 0px; opacity: 0.5;"] {
-    z-index: 1 !important;
+    z-index: 3 !important;
   }
 
   .roam-block-container,
@@ -630,9 +630,6 @@ span {
     color: #000010;
     background: #cbebfb;
   }
-  .bp3-popover div[style="padding: 8px 0px; font-size: 0.8em; color: rgb(167, 182, 194);"] {
-    color: #000010 !important;
-  }
   .bp3-popover > .bp3-popover-content {
     background-color: #cbebfb;
     color: #000010;
@@ -643,6 +640,10 @@ span {
   .bp3-popover .bp3-popover-arrow-border {
     fill: #000010;
     fill-opacity: 0.3;
+  }
+
+  .bp3-popover div[style="padding: 8px 0px; font-size: 0.8em; color: rgb(167, 182, 194);"] {
+    color: #000010 !important;
   }
   .bp3-popover .bp3-button {
     color: #000010;
@@ -1473,7 +1474,7 @@ span {
   }
 
   div[style="position: absolute; z-index: 1000; top: 0px; right: 0px; opacity: 0.5;"] {
-    z-index: 1 !important;
+    z-index: 3 !important;
   }
 
   .roam-block-container,
@@ -2017,9 +2018,6 @@ span {
     color: #00000f;
     background: #cbebfb;
   }
-  .bp3-popover div[style="padding: 8px 0px; font-size: 0.8em; color: rgb(167, 182, 194);"] {
-    color: #00000f !important;
-  }
   .bp3-popover > .bp3-popover-content {
     background-color: #cbebfb;
     color: #00000f;
@@ -2030,6 +2028,10 @@ span {
   .bp3-popover .bp3-popover-arrow-border {
     fill: #00000f;
     fill-opacity: 0.3;
+  }
+
+  .bp3-popover div[style="padding: 8px 0px; font-size: 0.8em; color: rgb(167, 182, 194);"] {
+    color: #00000f !important;
   }
   .bp3-popover .bp3-button {
     color: #00000f;
