--- a/src/_global.scss
+++ b/src/_global.scss
@@ -29,7 +29,7 @@ span {
 
 div[style="position: absolute; z-index: 1000; top: 0px; right: 0px; opacity: 0.5;"] {
   //code block button
-  z-index: 1 !important;
+  z-index: 3 !important;
 }
 
 .roam-block-container,
